@@ -96,3 +96,4 @@
 - Fixed another SVS2MODE bug that would make it send an empty MODE change
 - Removed the old chmode +x = +c and +I = +V support (3.x use +cV and 2.1.7 is obsolete)
 - Implimented except socks {} and tld {}
+- Removed the old read_tlines code and made /stats t show tld {} blocks
